force-app/main/default/objects/WC_Verification__c/WC_Verification__c.object-meta.xml
<CustomObject>
    <label>WC Verification</label>
    <nameField>
        <displayFormat>WC-{000000000}</displayFormat>
        <label>WC Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WC Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>