force-app/main/default/objects/WC_Verification__c/fields/Adjuster_Name__c.field-meta.xml
<CustomField>
    <fullName>Adjuster_Name__c</fullName>
    <label>Adjuster Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>