force-app/main/default/objects/WC_Verification__c/fields/Attorney_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney/Lawyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WC Verifications (Attorney/Lawyer)</relationshipLabel>
    <relationshipName>WC_Verifications1</relationshipName>
    <type>Lookup</type>
</CustomField>