force-app/main/default/objects/WC_Verification__c/fields/Auth_Fax__c.field-meta.xml
<CustomField>
    <fullName>Auth_Fax__c</fullName>
    <label>Auth Fax #</label>
    <type>Phone</type>
</CustomField>