force-app/main/default/objects/WC_Verification__c/fields/Auth_for_TENS__c.field-meta.xml
<CustomField>
    <fullName>Auth_for_TENS__c</fullName>
    <label>Auth for TENS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>