force-app/main/default/objects/WC_Verification__c/fields/Auth_Phone__c.field-meta.xml
<CustomField>
    <fullName>Auth_Phone__c</fullName>
    <label>Auth Phone #</label>
    <type>Phone</type>
</CustomField>