force-app/main/default/objects/WC_Verification__c/fields/Auth_Req_d_for_MD_Office_visit__c.field-meta.xml
<CustomField>
    <fullName>Auth_Req_d_for_MD_Office_visit__c</fullName>
    <label>Auth Req&apos;d for MD Office visit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>