force-app/main/default/objects/WC_Verification__c/fields/Can_they_treat_OON__c.field-meta.xml
<CustomField>
    <fullName>Can_they_treat_OON__c</fullName>
    <label>Can they treat OON?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>