force-app/main/default/objects/WC_Verification__c/fields/Can_Treat__c.field-meta.xml
<CustomField>
    <fullName>Can_Treat__c</fullName>
    <label>Can Treat?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>Chiro</fullName>
            </value>
            <value>
                <fullName>Acu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>