force-app/main/default/objects/WC_Verification__c/fields/Date_of_Accident__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Accident__c</fullName>
    <label>Date of Accident</label>
    <required>true</required>
    <type>Date</type>
</CustomField>