force-app/main/default/objects/WC_Verification__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <formula>IF(NOT(ISNULL( Potential_Patient__c )),  Potential_Patient__r.Lead_Date_of_Birth__c ,  Patient__r.PersonContact.Contact_Date_of_Birth__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>