force-app/main/default/objects/WC_Verification__c/fields/DX_Body_Parts_Listed_on_Claim__c.field-meta.xml
<CustomField>
    <fullName>DX_Body_Parts_Listed_on_Claim__c</fullName>
    <label>DX/Body Parts Listed on Claim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>