force-app/main/default/objects/WC_Verification__c/fields/Employer_Info__c.field-meta.xml
<CustomField>
    <fullName>Employer_Info__c</fullName>
    <label>Employer Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>