force-app/main/default/objects/WC_Verification__c/fields/Employer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Employer_Phone_Number__c</fullName>
    <label>Employer Phone Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>