force-app/main/default/objects/WC_Verification__c/fields/Employer_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Employer_Point_of_Contact__c</fullName>
    <label>Employer Point of Contact</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>