force-app/main/default/objects/WC_Verification__c/fields/Employer_s_Address__c.field-meta.xml
<CustomField>
    <fullName>Employer_s_Address__c</fullName>
    <label>Employer&apos;s Address</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>