force-app/main/default/objects/WC_Verification__c/fields/If_NY_Claim_patient_claim_address__c.field-meta.xml
<CustomField>
    <fullName>If_NY_Claim_patient_claim_address__c</fullName>
    <label>If NY Claim, patient claim address in?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NJ</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>