force-app/main/default/objects/WC_Verification__c/fields/If_yes_same_day__c.field-meta.xml
<CustomField>
    <fullName>If_yes_same_day__c</fullName>
    <label>If yes, same day?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>