force-app/main/default/objects/WC_Verification__c/fields/IME_s__c.field-meta.xml
<CustomField>
    <fullName>IME_s__c</fullName>
    <label>IME&apos;s/Cut Offs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>