force-app/main/default/objects/WC_Verification__c/fields/Insurance_Verification__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Verification</label>
    <referenceTo>Insurance_Verification__c</referenceTo>
    <relationshipLabel>WC Verifications</relationshipLabel>
    <relationshipName>WC_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>