force-app/main/default/objects/WC_Verification__c/fields/MG2__c.field-meta.xml
<CustomField>
    <fullName>MG2__c</fullName>
    <label>MG2/C4 Form (NY)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>