force-app/main/default/objects/WC_Verification__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WC Verifications</relationshipLabel>
    <relationshipName>WC_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>