force-app/main/default/objects/WC_Verification__c/fields/Potential_Patient__c.field-meta.xml
<CustomField>
    <fullName>Potential_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Potential Patient</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>WC Verifications</relationshipLabel>
    <relationshipName>WC_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>