force-app/main/default/objects/WC_Verification__c/fields/Taken_By_Ambulance__c.field-meta.xml
<CustomField>
    <fullName>Taken_By_Ambulance__c</fullName>
    <label>Taken By Ambulance</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>