force-app/main/default/objects/WC_Verification__c/fields/TENS_allowed__c.field-meta.xml
<CustomField>
    <fullName>TENS_allowed__c</fullName>
    <label>TENS allowed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>