force-app/main/default/objects/WC_Verification__c/fields/Urgent_Care_Hospital_Taken_To__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Care_Hospital_Taken_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Urgent Care/Hospital Taken To?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WC Verifications (Urgent Care/Hospital Taken To?)</relationshipLabel>
    <relationshipName>WC_Verifications2</relationshipName>
    <type>Lookup</type>
</CustomField>