force-app/main/default/objects/WC_Verification__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verified By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WC Verifications</relationshipLabel>
    <relationshipName>WC_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>