force-app/main/default/objects/WC_Verification__c/fields/WC_Accident_Description__c.field-meta.xml
<CustomField>
    <fullName>WC_Accident_Description__c</fullName>
    <label>WC Accident Description</label>
    <type>TextArea</type>
</CustomField>