force-app/main/default/objects/WC_Verification__c/fields/WC_Verification_Notes__c.field-meta.xml
<CustomField>
    <fullName>WC_Verification_Notes__c</fullName>
    <label>WC Verification Notes</label>
    <type>TextArea</type>
</CustomField>