force-app/main/default/objects/WC_Verification__c/fields/WCB_Case__c.field-meta.xml
<CustomField>
    <fullName>WCB_Case__c</fullName>
    <label>WCB Case#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>